# Agent-Web-Generator

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  requirements.txt
backend/: .env.example  LICENSE.txt  pyproject.toml
backend/app/: main.py
backend/app/agents/: agent_principal.py  web_builder_agent.py
backend/app/api/routes/: chat.py  generate.py
backend/app/db/: database.py  test_db.py
backend/app/dto/: customization_dto.py  prompt_dto.py  web_customization_dto.py  web_plan_dto.py
backend/app/services/: adk_agent_service.py  file_storage.py  page_generator.py  stitch_adk_client.py  stitch_client.py
backend/generations/: 2026-02-20_ecommerce_7b2065.html  2026-02-20_ecommerce_7b2065.json  2026-02-20_ecommerce_7b2065_3.html  2026-02-20_landing_7b2065_2.html  2026-02-23_ecommerce_7b2065.json  2026-02-26_generic_7b2065.html  2026-02-26_generic_7b2065.json  index.json
backend/src/pyproyect_toml/: __about__.py
backend/tests/: __init__.py
backend/uploads/: 2026-02-20_ecommerce_7b2065_3.json  2026-02-20_landing_7b2065.html  2026-02-20_landing_7b2065.json  2026-02-20_landing_7b2065_2.json  2026-02-20_landing_7b2065_3.html  2026-02-20_landing_7b2065_3.json  2026-02-23_ecommerce_7b2065.html  index.json
