[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyproyect-toml"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "victorcu396", email = "vmenendezmata@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/victorcu396/pyproyect-toml#readme"
Issues = "https://github.com/victorcu396/pyproyect-toml/issues"
Source = "https://github.com/victorcu396/pyproyect-toml"

[tool.hatch.version]
path = "src/pyproyect_toml/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyproyect_toml tests}"

[tool.coverage.run]
source_pkgs = ["pyproyect_toml", "tests"]
branch = true
parallel = true
omit = [
  "src/pyproyect_toml/__about__.py",
]

[tool.coverage.paths]
pyproyect_toml = ["src/pyproyect_toml", "*/pyproyect-toml/src/pyproyect_toml"]
tests = ["tests", "*/pyproyect-toml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
